# 2048-clone

./: CMakeLists.txt  README.md
assets/: README.md
assets/fonts/: README.md
include/game/: argsParse.h  game.h  gameUtils.h  input.h
include/render/: animate.h  app.h  draw.h  drawUtils.h
src/: main.c
src/game/: argsParse.c  game.c  gameUtils.c  input.c
src/render/: animate.c  app.c  draw.c  drawUtils.c
